crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__hook__hook_post_tool_use_valid.snap
---
source: crates/engram-cli/tests/cli/snapshot/hook.rs
expression: "f.run_with_stdin(& [\"hook\", \"post-tool-use\"], & stdin)"
---
$ engramdb --no-maintenance --dir [PROJECT] hook post-tool-use
exit: 0
--- stdout ---
--- stderr ---
