crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__hook__hook_pre_compact_empty_json.snap
---
source: crates/engram-cli/tests/cli/snapshot/hook.rs
expression: "f.run_with_stdin(& [\"hook\", \"pre-compact\"], & stdin)"
---
$ engramdb --no-maintenance --dir [PROJECT] hook pre-compact
exit: 0
--- stdout ---
{
  "hookSpecificOutput": {
    "additionalContext": "[EngramDB] Context is about to be compacted. Store durable discoveries first: decisions (with their premise), hazards, and verified observations via the memory create tool.",
    "hookEventName": "PreCompact"
  }
}
--- stderr ---
