crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__hook__hook_pre_tool_use_empty_json.snap
---
source: crates/engram-cli/tests/cli/snapshot/hook.rs
expression: "f.run_with_stdin(& [\"hook\", \"pre-tool-use\"], & stdin)"
---
$ engramdb --no-maintenance --dir [PROJECT] hook pre-tool-use
exit: 0
--- stdout ---
--- stderr ---
