crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__hook__hook_session_end_empty_json.snap
---
source: crates/engram-cli/tests/cli/snapshot/hook.rs
expression: "f.run_with_stdin(& [\"hook\", \"session-end\"], & stdin)"
---
$ engramdb --no-maintenance --dir [PROJECT] hook session-end
exit: 0
--- stdout ---
--- stderr ---
