crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__hook__hook_session_start_min_criticality_high.snap
---
source: crates/engram-cli/tests/cli/snapshot/hook.rs
expression: "f.run_with_stdin(&[\"hook\", \"session-start\", \"--min-criticality\", \"0.99\"],\n\"{}\")"
---
$ engramdb --no-maintenance --dir [PROJECT] hook session-start --min-criticality 0.99
exit: 0
--- stdout ---
{
  "hookSpecificOutput": {
    "additionalContext": "[EngramDB] When you finish the task you were assigned, before handing back: did anything durable about the project, the environment/tooling, or the user's preferences come up — not task minutiae? If so, review existing EngramDB memories and record the durable ones, and flag anything that contradicts a memory. Project knowledge belongs in EngramDB, not in Claude Code's auto-memory, which other sessions' EngramDB lookups and collaborators never see. Suggested, not required.",
    "hookEventName": "SessionStart"
  }
}
--- stderr ---
